# lab-netapp-activeiq

./: .env.example  .gitignore  .pre-commit-config-old.yaml  .pre-commit-config.yaml  404.html  Dockerfile  PYTHON_VERSION_UPDATE_SUMMARY.md  README.md  VERSION_SUMMARY.md  deploy-knative.sh  dev.sh  index.html  mcp_requirements.txt  mcp_server.py  mkdocs-pdf.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  sitemap.xml  start-docs.sh  start_mcp_server.py  temporal_worker.py  temporal_workflows.py  test_mcp_server.py
.github/workflows/: deploy-docs.yml
DEVELOPMENT/: index.html
MCP_SERVER_README/: index.html
MKDOCS_VERSION_SUMMARY/: index.html
PYTHON_VERSION_UPDATE_SUMMARY/: index.html
advanced-use-cases/: index.html
api-endpoints/: index.html
api-management/: gravitee-api-definitions.json  gravitee-deployment.yaml  openapi-storage-management.yaml
api-management/api-management-strategy/: index.html
api-use-cases-table/: index.html
api/mcp-tools/: index.html
apps/mcp/: README.md  mcp_config.json  pyproject.toml
apps/mcp/helm/netapp-mcp/: values-production.yaml  values.yaml
apps/mcp/helm/netapp-mcp/templates/: extras.yaml  knative-service.yaml
apps/mcp/src/netapp_mcp_server/: __init__.py  mcp_server.py  start_mcp_server.py  test_mcp_server.py
apps/temporal/: README.md  pyproject.toml
apps/temporal/src/netapp_temporal_workflows/: __init__.py  temporal_worker.py  temporal_workflows.py
architecture/faas-function-tom/: index.html
architecture/knative-function-tom/: index.html
architecture/system-design/: index.html
architecture/target-operating-model/: index.html
architecture/technical-documentation/: index.html
argocd/: application.yaml
data-models/: index.html
deployment/ARGOCD_HELM_DEPLOYMENT/: index.html
deployment/KNATIVE_DEPLOYMENT/: index.html
deployment/function-based-architecture/: index.html
deployment/knative-functions-deployment/: index.html
docs/: DEVELOPMENT.md  MCP_SERVER_README.md  MKDOCS_VERSION_SUMMARY.md  PYTHON_VERSION_UPDATE_SUMMARY.md  README.md  advanced-use-cases.md  api-endpoints.md  api-use-cases-table.md  data-models.md  examples.md  index.md  navigation.md  netapp-activeiq-api-overview.md  temporal-integration.md
docs/api/: mcp-tools.md
docs/api-management/: api-management-strategy.md  openapi-storage-management.yaml
docs/architecture/: faas-function-tom.md  knative-function-tom.md  system-design.md  target-operating-model.md  technical-documentation.md
docs/deployment/: ARGOCD_HELM_DEPLOYMENT.md  KNATIVE_DEPLOYMENT.md  function-based-architecture.md  knative-functions-deployment.md
docs/examples/: basic-usage.md
docs/getting-started/: installation.md  knative-functions-quickstart.md  overview.md  quick-start.md
docs/javascripts/: mermaid-config.js
docs/netapp-cli/: README.md
docs/stylesheets/: extra.css  pdf-export.css
docs/testing/: mermaid-test-page.md  mermaid-validation-summary.md
docs/use-cases/: annotate_event.md  attach_metadata_to_object.md  backup-recovery.md  capacity-planning.md  decommission_fileshare.md  event-management.md  expand_lun.md  infrastructure-management.md  netapp_api_use_cases_overview.md  performance-analysis.md  provision_nfs_fileshare.md  storage-monitoring.md  svm-management.md  tag_svm_with_event_annotation.md  tag_volume_with_nametag.md  volume-operations.md
donnees-externes/: Le fichier OpenAPI est-il disponible en télécharge.md  doc-arbo.txt  faas-func-mcp-server-deploy.md  kn-func-mcp-server-deploy.md  netapp-activeIQ_v2.yaml  retrieve me thi openapi file of it.md  searching about ActiveIQ netapp rest_api definitio.md
examples/: index.html
examples/basic-usage/: index.html
getting-started/installation/: index.html
getting-started/knative-functions-quickstart/: index.html
getting-started/overview/: index.html
getting-started/quick-start/: index.html
helm/netapp-mcp/: Chart.yaml  values-production.yaml  values.yaml
javascripts/: termynal.js
k8s/: configmap.yaml  knative-service.yaml  kustomization.yaml  rbac.yaml  secret.yaml
navigation/: index.html
netapp-activeiq-api-overview/: index.html
netapp-cli/: README.md  index.html  main.py  pyproject.toml  pytest.ini
netapp-cli/netapp_cli/: __init__.py  main.py
netapp-cli/netapp_cli/commands/: auth.py  cluster.py  fileshare.py  lun.py  monitor.py  snapshot.py  volume.py
netapp-cli/netapp_cli/utils/: api_client.py  config.py  naming.py  output.py
netapp-cli/tests/: README.md  __init__.py  conftest.py
netapp-cli/tests/integration/: __init__.py  test_cli_integration.py
netapp-cli/tests/unit/: __init__.py  test_api_client.py  test_config.py  test_naming.py  test_volume.py
scripts/: deploy-knative-functions.sh  fix-mermaid-syntax.sh  verify-mermaid.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/ARGOCD_HELM_DEPLOYMENT/: index.html
site/DEVELOPMENT/: index.html
site/KNATIVE_DEPLOYMENT/: index.html
site/MCP_SERVER_README/: index.html
site/advanced-use-cases/: index.html
site/api-endpoints/: index.html
site/api-management/: gravitee-deployment.yaml
site/api-use-cases-table/: index.html
site/data-models/: index.html
site/examples/: index.html
site/javascripts/: extra.js  mermaid-config.js
site/navigation/: index.html
site/netapp-activeiq-api-overview/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css  termynal.css
site/temporal-integration/: index.html
stylesheets/: termynal.css
temporal-integration/: index.html
testing/mermaid-test-page/: index.html
testing/mermaid-validation-summary/: index.html
use-cases/annotate_event/: index.html
use-cases/attach_metadata_to_object/: index.html
use-cases/backup-recovery/: index.html
use-cases/capacity-planning/: index.html
use-cases/decommission_fileshare/: index.html
use-cases/event-management/: index.html
use-cases/expand_lun/: index.html
use-cases/infrastructure-management/: index.html
use-cases/monitor_cluster_performance/: index.html
use-cases/netapp_api_use_cases_overview/: index.html
(+100 files in other folders)
