[project]
name = "netapp-activeiq-platform"
version = "1.0.0"
description = "NetApp ActiveIQ Platform with MCP Server and Temporal Workflows"
authors = [
    { name = "NetApp Integration Team", email = "netapp-integration@company.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

keywords = ["netapp", "activeiq", "mcp", "temporal", "workflows", "infrastructure"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[project.optional-dependencies]
all = [
    "netapp-mcp-server",
    "netapp-temporal-workflows",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.uv.sources]
netapp-mcp-server = { workspace = true }
netapp-temporal-workflows = { workspace = true }

[project.urls]
Homepage = "https://github.com/netapp/activeiq-platform"
Documentation = "https://netapp-mcp-server.docs/"
Repository = "https://github.com/netapp/activeiq-platform.git"
"Bug Tracker" = "https://github.com/netapp/activeiq-platform/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.uv.workspace]
members = ["apps/mcp", "apps/temporal"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
