# This is a workspace root project - no individual package to build
# All packages are in the workspace members below

[tool.uv.sources]
netapp-mcp-server = { workspace = true }
netapp-temporal-workflows = { workspace = true }
netapp-cli = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.uv.workspace]
members = [
    "apps/mcp",
 "apps/temporal",
 "netapp-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
